Docker containere fungerer

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,10 @@
 FROM golang:1.17.0-alpine as builder
-COPY . /go/src
-RUN cd /go/src && go mod tidy && go build
+WORKDIR /go/src
+COPY ./ ./
+RUN go mod tidy && go build
 
 
 FROM alpine:latest
-COPY --from=builder /go/src/frontend /
+COPY --from=builder /go/src ./
 ENTRYPOINT ["/frontend"]
 
