--- a/.github/tests/automation.yml
+++ b/.github/tests/automation.yml
@@ -1,25 +1,23 @@
 name: Go
-on: 
+on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ] 
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
        - uses: actions/checkout@v2
-      
        - name: Set up Go
          uses: action/setup-go@v2
-         with: 
+         with:
           go-version: 1.16
 
        - name: Build
-         run: go build -v ../../frontend
-        
+         run: go build -v ./frontend
        - name: Test
-         run: go test -v ../../frontend
+         run: go test -v ./frontend
 
 
