--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -16,8 +16,8 @@ jobs:
           go-version: 1.16
 
        - name: Build
-         run: go build -v ./frontend
+         run: go build -v ../../frontend
        - name: Test
-         run: go test -v ./frontend
+         run: go test -v ../../frontend
 
 
