--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  Test:
     runs-on: ubuntu-latest
     steps:
        - uses: actions/checkout@v2
@@ -14,10 +14,7 @@ jobs:
          uses: action/setup-go@v2
          with:
           go-version: 1.16
-
-       - name: Build
-         run: go build -v ../../frontend
        - name: Test
-         run: go test -v ../../frontend
+         run: cd ../../frontend && go test
 
 
