--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -15,6 +15,6 @@ jobs:
          with:
           go-version: 1.16
        - name: Test
-         run: cd ../../frontend && go test
+         run: cd frontend && go test
 
 
