--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
        - uses: actions/checkout@v2
        - name: Set up Go
-         uses: action/setup-go@v2
+         uses: actions/setup-go@v2
          with:
           go-version: 1.16
        - name: Test
